# rivers

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  Justfile  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES  changedecisionlog.md
crates/cargo-deploy/: Cargo.toml
crates/cargo-deploy/src/: main.rs
crates/riverpackage/: Cargo.toml
crates/riverpackage/src/: main.rs  migrate.rs
crates/rivers-core/: Cargo.toml
crates/rivers-core-config/: Cargo.toml
crates/rivers-core-config/src/: config.rs  error.rs  event.rs  lib.rs  lockbox_config.rs  storage.rs
crates/rivers-core/src/: app_log_router.rs  driver_factory.rs  eventbus.rs  lib.rs  lockbox.rs  logging.rs  secret.rs  storage.rs  tls.rs
crates/rivers-core/tests/: driver_bench.rs  driver_factory_tests.rs  drivers_tests.rs  eventbus_tests.rs  faker_live_test.rs  lockbox_e2e_test.rs  lockbox_tests.rs  logging_tests.rs  memcached_live_test.rs  mysql_live_test.rs  postgres_live_test.rs  redis_live_test.rs  sqlite_live_test.rs  storage_live_test.rs  storage_redis_tests.rs  storage_sqlite_tests.rs  storage_tests.rs
crates/rivers-driver-sdk/: Cargo.toml
crates/rivers-driver-sdk/src/: broker.rs  broker_contract_fixtures.rs  defaults.rs  error.rs  http_driver.rs  http_executor.rs  http_validation.rs  lib.rs  operation_descriptor.rs  traits.rs  types.rs  validation.rs
crates/rivers-driver-sdk/tests/: broker_contract.rs  ddl_guard_tests.rs  http_driver_tests.rs  http_executor_tests.rs  param_translation_tests.rs  schema_validation_tests.rs  sdk_tests.rs
crates/rivers-drivers-builtin/: Cargo.toml
crates/rivers-drivers-builtin/src/: eventbus.rs  faker.rs  filesystem.rs  lib.rs  memcached.rs  mysql.rs  postgres.rs  redis.rs  rps_client.rs  sqlite.rs
crates/rivers-drivers-builtin/tests/: conformance_tests.rs
crates/rivers-engine-v8/: Cargo.toml
crates/rivers-engine-v8/src/: execution.rs  lib.rs  task_context.rs  v8_runtime.rs
crates/rivers-engine-wasm/: Cargo.toml
crates/rivers-engine-wasm/src/: lib.rs
crates/rivers-keystore/: Cargo.toml
crates/rivers-keystore-engine/: Cargo.toml
crates/rivers-keystore-engine/src/: crypto.rs  io.rs  key_management.rs  lib.rs  types.rs
crates/rivers-keystore-engine/tests/: crypto_tests.rs  integration_test.rs  io_tests.rs  key_management_tests.rs
crates/rivers-keystore/src/: main.rs
crates/rivers-lockbox/: Cargo.toml
crates/rivers-lockbox-engine/: Cargo.toml
crates/rivers-lockbox-engine/src/: crypto.rs  key_source.rs  lib.rs  resolver.rs  startup.rs  types.rs  validation.rs
crates/rivers-lockbox-engine/tests/: crypto_tests.rs  key_source_tests.rs  resolver_tests.rs  startup_tests.rs
crates/rivers-lockbox/src/: main.rs
crates/rivers-plugin-cassandra/: Cargo.toml
crates/rivers-plugin-cassandra/src/: lib.rs
crates/rivers-plugin-cassandra/tests/: cassandra_live_test.rs  driver_bench.rs
crates/rivers-plugin-couchdb/: Cargo.toml
crates/rivers-plugin-couchdb/src/: lib.rs
crates/rivers-plugin-couchdb/tests/: couchdb_live_test.rs  driver_bench.rs  lockbox_helper.rs
crates/rivers-plugin-elasticsearch/: Cargo.toml
crates/rivers-plugin-elasticsearch/src/: lib.rs
crates/rivers-plugin-elasticsearch/tests/: driver_bench.rs  es_live_test.rs
crates/rivers-plugin-exec/: Cargo.toml
crates/rivers-plugin-exec/src/: config.rs  connection.rs  executor.rs  integrity.rs  lib.rs  schema.rs  template.rs
crates/rivers-plugin-exec/tests/: integration_test.rs
crates/rivers-plugin-kafka/: Cargo.toml
crates/rivers-plugin-kafka/src/: lib.rs
crates/rivers-plugin-kafka/tests/: driver_bench.rs  kafka_live_test.rs
crates/rivers-plugin-ldap/: Cargo.toml
crates/rivers-plugin-ldap/src/: lib.rs
crates/rivers-plugin-ldap/tests/: driver_bench.rs  ldap_live_test.rs
crates/rivers-plugin-nats/: Cargo.toml
crates/rivers-plugin-nats/src/: lib.rs
crates/rivers-plugin-nats/tests/: driver_bench.rs  nats_live_test.rs
crates/rivers-plugin-neo4j/: Cargo.toml
crates/rivers-plugin-neo4j/src/: lib.rs
crates/rivers-plugin-neo4j/tests/: lockbox_helper.rs  neo4j_live_test.rs
crates/rivers-plugin-rabbitmq/: Cargo.toml
crates/rivers-plugin-rabbitmq/src/: lib.rs
crates/rivers-plugin-rabbitmq/tests/: driver_bench.rs  rabbitmq_live_test.rs
crates/rivers-plugin-redis-streams/: Cargo.toml
crates/rivers-plugin-redis-streams/src/: lib.rs
crates/rivers-plugin-redis-streams/tests/: driver_bench.rs  redis_streams_live_test.rs
crates/rivers-runtime/: Cargo.toml
crates/rivers-runtime/src/: bundle.rs  datasource.rs  dataview.rs  dataview_engine.rs  env_override.rs  home.rs  lib.rs  loader.rs  module_cache.rs  pool_handle.rs  pseudo_dataview.rs  schema.rs  tiered_cache.rs  validate.rs  validate_crossref.rs  validate_engine.rs  validate_existence.rs  validate_format.rs  validate_pipeline.rs  validate_result.rs  validate_structural.rs  validate_syntax.rs  view.rs
crates/rivers-runtime/tests/: app_config_tests.rs  bundle_tests.rs  cache_bench.rs  config_schema_tests.rs  config_tests.rs  dataview_engine_tests.rs  pseudo_dataview_tests.rs  schema_tests.rs  server_config_tests.rs  tiered_cache_tests.rs
crates/riversctl/: Cargo.toml
crates/riversctl/src/: main.rs  tls_cmd.rs
crates/riversd/: Cargo.toml
crates/riversd/src/: admin.rs  admin_auth.rs  admin_handlers.rs  audit.rs  backpressure.rs  broker_bridge.rs  broker_supervisor.rs  bundle_diff.rs  bundle_loader.rs  circuit_breaker.rs  cli.rs  cors.rs  csrf.rs  deployment.rs  engine_loader.rs  error_response.rs  graphql.rs  guard.rs  health.rs  hot_reload.rs  http_client.rs  init_handler.rs  keystore.rs  lib.rs  main.rs  message_consumer.rs  middleware.rs  otlp_transcoder.rs  polling.rs  pool.rs  pool_handle_impl.rs  rate_limit.rs  runtime.rs  schema_introspection.rs  security_pipeline.rs  server.rs  service_discovery.rs  session.rs  shutdown.rs  sse.rs  (+8 more)
crates/riversd/tests/: admin_auth_tests.rs  admin_tests.rs  b3_module_cache_strict_tests.rs  boot_parity_tests.rs  broker_bridge_tests.rs  broker_supervisor_tests.rs  cli_tests.rs  config_validation_tests.rs  cors_tests.rs  ddl_pipeline_tests.rs  (+39 more)
(+611 files in other folders)
