[package]
name = "cargo-deploy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deploy Rivers runtime to a target directory"

[[bin]]
name = "cargo-deploy"
path = "src/main.rs"

[dependencies]
rivers-core-config = { path = "../rivers-core-config" }
rcgen.workspace = true
time.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
