[package]
name = "riverpackage"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "riverpackage"
path = "src/main.rs"

[dependencies]
rivers-core-config = { path = "../rivers-core-config" }
rivers-runtime = { path = "../rivers-runtime" }
rivers-driver-sdk = { path = "../rivers-driver-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
