[package]
name = "rivers-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = ["drivers", "storage-backends", "lockbox", "tls"]
drivers = ["rivers-drivers-builtin"]
storage-backends = ["rivers-storage-backends"]
lockbox = ["rivers-lockbox-engine"]
tls = ["rcgen", "sha2", "time", "rustls", "x509-parser"]
metrics = ["dep:metrics"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
age = { workspace = true, optional = true }
zeroize = { workspace = true }
libloading = { workspace = true }
hex = { workspace = true }
schemars = { workspace = true }
rcgen = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
time = { workspace = true, optional = true }
rustls = { workspace = true, optional = true, features = ["std"] }
x509-parser = { workspace = true, optional = true }
rivers-core-config = { path = "../rivers-core-config" }
rivers-driver-sdk = { path = "../rivers-driver-sdk" }
rivers-drivers-builtin = { path = "../rivers-drivers-builtin", optional = true, default-features = false }
rivers-storage-backends = { path = "../rivers-storage-backends", optional = true }
rivers-lockbox-engine = { path = "../rivers-lockbox-engine", optional = true }
metrics = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
age = { workspace = true }
zeroize = { workspace = true }
rivers-driver-sdk = { path = "../rivers-driver-sdk" }
