[package]
name = "rivers-drivers-builtin"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
plugin-exports = []

[dependencies]
rivers-driver-sdk = { path = "../rivers-driver-sdk" }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-postgres = { workspace = true }
mysql_async = { workspace = true }
rusqlite = { workspace = true }
redis = { workspace = true }

[target.'cfg(unix)'.dependencies]
async-memcached = { workspace = true }
