[package]
name = "rivers-keystore-engine"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
age = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
