[package]
name = "rivers-keystore-engine"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
aes-gcm = { workspace = true }
age = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
