[package]
name = "rivers-keystore"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "rivers-keystore"
path = "src/main.rs"

[dependencies]
rivers-keystore-engine = { path = "../rivers-keystore-engine" }
age = { workspace = true }
clap = { version = "4", features = ["derive"] }
