[package]
name = "rivers-lockbox"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "rivers-lockbox"
path = "src/main.rs"

[dependencies]
rivers-lockbox-engine = { path = "../rivers-lockbox-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
age = { workspace = true }
zeroize = { workspace = true }
rpassword = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
