[package]
name = "rivers-plugin-couchdb"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rivers-driver-sdk = { path = "../rivers-driver-sdk" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rivers-core = { path = "../rivers-core" }
age = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
