[package]
name = "rivers-plugin-elasticsearch"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
plugin-exports = []

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
rivers-driver-sdk = { path = "../rivers-driver-sdk" }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
