[package]
name = "rivers-plugin-kafka"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin-exports"]
plugin-exports = []

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rskafka = { workspace = true }
rivers-driver-sdk = { path = "../rivers-driver-sdk" }
