[package]
name = "rivers-plugin-ldap"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin-exports"]
plugin-exports = []

[dependencies]
rivers-driver-sdk = { path = "../rivers-driver-sdk" }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ldap3 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
