[package]
name = "rivers-plugin-redis-streams"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin-exports"]
plugin-exports = []

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
rivers-driver-sdk = { path = "../rivers-driver-sdk" }

[dev-dependencies]
rivers-core = { path = "../rivers-core" }
age = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
