[package]
name = "riversctl"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "riversctl"
path = "src/main.rs"

[features]
default = ["tls", "admin-api"]
tls = ["rivers-runtime/tls"]
admin-api = ["reqwest", "ed25519-dalek", "rand"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rivers-runtime = { path = "../rivers-runtime" }
libc = "0.2"

# Optional: admin API commands (status, deploy, drivers, etc.)
reqwest = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
