[package]
name = "riversd"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["static-engines", "static-plugins", "static-builtin-drivers", "metrics"]
metrics = ["dep:metrics-exporter-prometheus", "rivers-runtime/metrics"]
static-engines = ["v8", "wasmtime", "bcrypt", "hmac", "base64"]
static-builtin-drivers = ["rivers-runtime/drivers"]
static-plugins = [
    "rivers-plugin-cassandra", "rivers-plugin-couchdb", "rivers-plugin-mongodb",
    "rivers-plugin-elasticsearch", "rivers-plugin-influxdb", "rivers-plugin-kafka",
    "rivers-plugin-rabbitmq", "rivers-plugin-nats", "rivers-plugin-redis-streams",
    "rivers-plugin-ldap", "rivers-plugin-exec", "rivers-plugin-neo4j",
]

[dependencies]
rivers-runtime = { path = "../rivers-runtime", features = ["full"] }
rivers-engine-sdk = { path = "../rivers-engine-sdk" }
rivers-keystore-engine = { path = "../rivers-keystore-engine" }
libloading = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
ipnet = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
rustls = { workspace = true, features = ["std"] }
tokio-rustls = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio-stream = { workspace = true }
zeroize = { workspace = true }
percent-encoding = { workspace = true }
once_cell = "1"

# TypeScript compilation (spec: rivers-javascript-typescript-spec.md §2.1)
# Full-transform pipeline: parse → typescript::typescript() → emit.
# NOTE: spec specifies v0.90 but crates.io current is v64 (swc uses major-per-release).
# Spec correction logged in todo/changelog.md for Phase 1.
swc_core = { version = "64", features = [
    "ecma_ast",
    "ecma_parser",
    "ecma_parser_typescript",
    "ecma_transforms_typescript",
    "ecma_codegen",
    "ecma_visit",
    "common",
    "common_sourcemap",
] }
# Source map serialization + consumer (spec §5). Version pinned to match
# swc_core's transitive dep to avoid duplicate crate instances.
swc_sourcemap = "10"

# Optional: static engine deps (included with "static-engines" feature)
v8 = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
bcrypt = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
reqwest = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Optional: static plugin deps (included with "static-plugins" feature)
rivers-plugin-cassandra = { path = "../rivers-plugin-cassandra", optional = true, default-features = false }
rivers-plugin-couchdb = { path = "../rivers-plugin-couchdb", optional = true, default-features = false }
rivers-plugin-mongodb = { path = "../rivers-plugin-mongodb", optional = true, default-features = false }
rivers-plugin-elasticsearch = { path = "../rivers-plugin-elasticsearch", optional = true, default-features = false }
rivers-plugin-influxdb = { path = "../rivers-plugin-influxdb", optional = true, default-features = false }
rivers-plugin-kafka = { path = "../rivers-plugin-kafka", optional = true, default-features = false }
rivers-plugin-rabbitmq = { path = "../rivers-plugin-rabbitmq", optional = true, default-features = false }
rivers-plugin-nats = { path = "../rivers-plugin-nats", optional = true, default-features = false }
rivers-plugin-redis-streams = { path = "../rivers-plugin-redis-streams", optional = true, default-features = false }
rivers-plugin-ldap = { path = "../rivers-plugin-ldap", optional = true, default-features = false }
rivers-plugin-exec = { path = "../rivers-plugin-exec", optional = true, default-features = false }
rivers-plugin-neo4j = { path = "../rivers-plugin-neo4j", optional = true, default-features = false }

[dev-dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
