[package]
name = "riversd"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["static-engines", "static-plugins", "static-builtin-drivers", "metrics"]
metrics = ["dep:metrics-exporter-prometheus", "rivers-runtime/metrics"]
static-engines = ["v8", "wasmtime", "bcrypt", "hmac", "base64"]
static-builtin-drivers = ["rivers-runtime/drivers"]
static-plugins = [
    "rivers-plugin-cassandra", "rivers-plugin-couchdb", "rivers-plugin-mongodb",
    "rivers-plugin-elasticsearch", "rivers-plugin-influxdb", "rivers-plugin-kafka",
    "rivers-plugin-rabbitmq", "rivers-plugin-nats", "rivers-plugin-redis-streams",
    "rivers-plugin-ldap", "rivers-plugin-exec", "rivers-plugin-neo4j",
]

[dependencies]
rivers-runtime = { path = "../rivers-runtime", features = ["full"] }
rivers-engine-sdk = { path = "../rivers-engine-sdk" }
rivers-keystore-engine = { path = "../rivers-keystore-engine" }
libloading = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
ipnet = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
rustls = { workspace = true, features = ["std"] }
tokio-rustls = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio-stream = { workspace = true }
zeroize = { workspace = true }
percent-encoding = { workspace = true }
once_cell = "1"

# OTel span export (P1.7) + OTLP protobuf transcoder (P1.6)
# 0.31 stack: tonic 0.14 → axum ^0.8 (resolves the 0.26 axum 0.7 conflict).
# default-features = false: avoids reqwest-blocking-client pulling blocking deps.
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-client", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "with-serde", "trace", "metrics", "logs"] }
prost = "0.14"

# TypeScript compilation (spec: rivers-javascript-typescript-spec.md §2.1)
# Full-transform pipeline: parse → typescript::typescript() → emit.
# NOTE: spec specifies v0.90 but crates.io current is v64 (swc uses major-per-release).
# Spec correction logged in todo/changelog.md for Phase 1.
swc_core = { version = "64", features = [
    "ecma_ast",
    "ecma_parser",
    "ecma_parser_typescript",
    "ecma_transforms_typescript",
    "ecma_codegen",
    "ecma_visit",
    "common",
    "common_sourcemap",
] }
# Source map serialization + consumer (spec §5). Version pinned to match
# swc_core's transitive dep to avoid duplicate crate instances.
swc_sourcemap = "10"

# Optional: static engine deps (included with "static-engines" feature)
v8 = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
bcrypt = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
reqwest = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# Optional: static plugin deps (included with "static-plugins" feature)
rivers-plugin-cassandra = { path = "../rivers-plugin-cassandra", optional = true, default-features = false }
rivers-plugin-couchdb = { path = "../rivers-plugin-couchdb", optional = true, default-features = false }
rivers-plugin-mongodb = { path = "../rivers-plugin-mongodb", optional = true, default-features = false }
rivers-plugin-elasticsearch = { path = "../rivers-plugin-elasticsearch", optional = true, default-features = false }
rivers-plugin-influxdb = { path = "../rivers-plugin-influxdb", optional = true, default-features = false }
rivers-plugin-kafka = { path = "../rivers-plugin-kafka", optional = true, default-features = false }
rivers-plugin-rabbitmq = { path = "../rivers-plugin-rabbitmq", optional = true, default-features = false }
rivers-plugin-nats = { path = "../rivers-plugin-nats", optional = true, default-features = false }
rivers-plugin-redis-streams = { path = "../rivers-plugin-redis-streams", optional = true, default-features = false }
rivers-plugin-ldap = { path = "../rivers-plugin-ldap", optional = true, default-features = false }
rivers-plugin-exec = { path = "../rivers-plugin-exec", optional = true, default-features = false }
rivers-plugin-neo4j = { path = "../rivers-plugin-neo4j", optional = true, default-features = false }

[dev-dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
# Phase I8 — direct rusqlite handle for e2e durability assertions
# (re-open the SQLite tempfile from outside the dispatch to verify
# committed rows persisted / rolled-back rows did not).
rusqlite = { workspace = true }

# ── RPM packaging (cargo-generate-rpm) ────────────────────────────
#
# Static-only RPM with riversd + CLI tools + systemd unit + sample config.
# Mirrors the intent of `packaging/rpm/rivers.spec` but uses pure-Rust
# packaging so it builds from macOS without rpmbuild.
#
# Build:   `just package-rpm linux-x64`
# Source paths are workspace-relative (resolved by cargo-generate-rpm).
[package.metadata.generate-rpm]
name = "rivers"
summary = "Declarative app-service framework — build APIs with TOML config"
license = "Apache-2.0"
url = "https://github.com/pcastone/rivers"
requires = { systemd = "*" }

assets = [
    # Binaries — paths resolved relative to workspace root, --target prefixes target dir.
    { source = "target/release/riversd",        dest = "/usr/bin/riversd",        mode = "0755" },
    { source = "target/release/riversctl",      dest = "/usr/bin/riversctl",      mode = "0755" },
    { source = "target/release/rivers-lockbox", dest = "/usr/bin/rivers-lockbox", mode = "0755" },
    { source = "target/release/riverpackage",   dest = "/usr/bin/riverpackage",   mode = "0755" },

    # systemd unit
    { source = "packaging/systemd/riversd.service", dest = "/usr/lib/systemd/system/riversd.service", mode = "0644" },

    # Sample config — preserved on upgrade (config-noreplace)
    { source = "packaging/config/riversd.toml", dest = "/etc/rivers/riversd.toml", mode = "0640", config = "noreplace", user = "rivers", group = "rivers" },

    # Docs
    { source = "LICENSE",   dest = "/usr/share/doc/rivers/LICENSE",   mode = "0644", doc = true },
    { source = "README.md", dest = "/usr/share/doc/rivers/README.md", mode = "0644", doc = true },
]

# Empty runtime directories — owned by rivers user/group.
[[package.metadata.generate-rpm.dirs]]
path = "/var/lib/rivers"
mode = "0755"
user = "rivers"
group = "rivers"

[[package.metadata.generate-rpm.dirs]]
path = "/var/lib/rivers/lockbox"
mode = "0700"
user = "rivers"
group = "rivers"

[[package.metadata.generate-rpm.dirs]]
path = "/var/log/rivers"
mode = "0755"
user = "rivers"
group = "rivers"

[[package.metadata.generate-rpm.dirs]]
path = "/etc/rivers"
mode = "0755"
user = "root"
group = "rivers"

# Scriptlets — mirror `rivers.spec` %pre/%post/%preun/%postun.
[package.metadata.generate-rpm.scripts]
pre_install = """
getent group rivers > /dev/null 2>&1 || groupadd -r rivers
getent passwd rivers > /dev/null 2>&1 || \\
    useradd -r -g rivers -d /var/lib/rivers -s /sbin/nologin \\
    -c "Rivers application server" rivers
"""

post_install = """
systemctl daemon-reload >/dev/null 2>&1 || :
if [ "$1" = "1" ]; then
    systemctl enable riversd.service >/dev/null 2>&1 || :
fi
"""

pre_uninstall = """
if [ "$1" = "0" ]; then
    systemctl --no-reload disable --now riversd.service >/dev/null 2>&1 || :
fi
"""

post_uninstall = """
systemctl daemon-reload >/dev/null 2>&1 || :
if [ "$1" -ge 1 ]; then
    systemctl try-restart riversd.service >/dev/null 2>&1 || :
fi
"""
